[package]
name = "psbus"
version = "0.1.0"
authors = ["Jon Bailey <jonathan.bailey@comcast.net>"]
edition = "2018"
license = "MIT"
categories = ["asynchronous", "concurrency", "data-structures"]
keywords = ["publish", "subscribe", "event", "bus", "message"]
description = "Generic Publish / Subscribe model for application messaging"
readme = "README.md"
repository = "https://github.com/Zhendryk/psbus.git"

[dependencies]
uuid = "=0.8.1"
